remove some unnecessary incubator flags